raylib.odin


    @(link_name="DrawCylinderWires")
    DrawCylinderWires :: proc(
        position : Vector3,
        radiusTop : _c.float,
        radiusBottom : _c.float,
        height : _c.float,
        slices : _c.int,
        color : Color
    ) ---;

    @(link_name="DrawPlane")
    DrawPlane :: proc(
        centerPos : Vector3,
        size : Vector2,
        color : Color
    ) ---;

    @(link_name="DrawRay")
    DrawRay :: proc(
        ray : Ray,
        color : Color
    ) ---;

    @(link_name="DrawGrid")
    DrawGrid :: proc(
        slices : _c.int,
        spacing : _c.float
    ) ---;

    @(link_name="DrawGizmo")
    DrawGizmo :: proc(position : Vector3) ---;

    @(link_name="LoadModel")
    LoadModel :: proc(fileName : cstring) -> Model ---;

    @(link_name="LoadModelFromMesh")
    LoadModelFromMesh :: proc(mesh : Mesh) -> Model ---;

    @(link_name="UnloadModel")
    UnloadModel :: proc(model : Model) ---;

    @(link_name="LoadMesh")
    LoadMesh :: proc(fileName : cstring) -> Mesh ---;

    @(link_name="UnloadMesh")
    UnloadMesh :: proc(mesh : ^Mesh) ---;

    @(link_name="ExportMesh")
    ExportMesh :: proc(
        mesh : Mesh,
        fileName : cstring
    ) ---;

    @(link_name="MeshBoundingBox")
    MeshBoundingBox :: proc(mesh : Mesh) -> BoundingBox ---;

    @(link_name="MeshTangents")
    MeshTangents :: proc(mesh : ^Mesh) ---;

    @(link_name="MeshBinormals")
    MeshBinormals :: proc(mesh : ^Mesh) ---;

    @(link_name="GenMeshPoly")
    GenMeshPoly :: proc(
        sides : _c.int,
        radius : _c.float
    ) -> Mesh ---;

    @(link_name="GenMeshPlane")
    GenMeshPlane :: proc(
        width : _c.float,
        length : _c.float,
        resX : _c.int,
        resZ : _c.int
    ) -> Mesh ---;

    @(link_name="GenMeshCube")
    GenMeshCube :: proc(
        width : _c.float,
        height : _c.float,
        length : _c.float
    ) -> Mesh ---;

    @(link_name="GenMeshSphere")
    GenMeshSphere :: proc(
        radius : _c.float,
        rings : _c.int,
        slices : _c.int
    ) -> Mesh ---;

    @(link_name="GenMeshHemiSphere")
    GenMeshHemiSphere :: proc(
        radius : _c.float,
        rings : _c.int,
        slices : _c.int
    ) -> Mesh ---;

    @(link_name="GenMeshCylinder")
    GenMeshCylinder :: proc(
        radius : _c.float,
        height : _c.float,
        slices : _c.int
    ) -> Mesh ---;

    @(link_name="GenMeshTorus")
    GenMeshTorus :: proc(
        radius : _c.float,
        size : _c.float,
        radSeg : _c.int,
        sides : _c.int
    ) -> Mesh ---;

    @(link_name="GenMeshKnot")
    GenMeshKnot :: proc(
        radius : _c.float,
        size : _c.float,
        radSeg : _c.int,
        sides : _c.int
    ) -> Mesh ---;

    @(link_name="GenMeshHeightmap")
    GenMeshHeightmap :: proc(
        heightmap : Image,
        size : Vector3
    ) -> Mesh ---;

    @(link_name="GenMeshCubicmap")
    GenMeshCubicmap :: proc(
        cubicmap : Image,
        cubeSize : Vector3
    ) -> Mesh ---;

    @(link_name="LoadMaterial")
    LoadMaterial :: proc(fileName : cstring) -> Material ---;

    @(link_name="LoadMaterialDefault")
    LoadMaterialDefault :: proc() -> Material ---;

    @(link_name="UnloadMaterial")
    UnloadMaterial :: proc(material : Material) ---;

    @(link_name="DrawModel")
    DrawModel :: proc(
        model : Model,
        position : Vector3,
        scale : _c.float,
        tint : Color
    ) ---;

    @(link_name="DrawModelEx")
    DrawModelEx :: proc(
        model : Model,
        position : Vector3,
        rotationAxis : Vector3,
        rotationAngle : _c.float,
        scale : Vector3,
        tint : Color
    ) ---;

    @(link_name="DrawModelWires")
    DrawModelWires :: proc(
        model : Model,
        position : Vector3,
        scale : _c.float,
        tint : Color
    ) ---;

    @(link_name="DrawModelWiresEx")
    DrawModelWiresEx :: proc(
        model : Model,
        position : Vector3,
        rotationAxis : Vector3,
        rotationAngle : _c.float,
        scale : Vector3,
        tint : Color
    ) ---;

    @(link_name="DrawBoundingBox")
    DrawBoundingBox :: proc(
        box : BoundingBox,
        color : Color
    ) ---;

    @(link_name="DrawBillboard")
    DrawBillboard :: proc(
        camera : Camera,
        texture : Texture2D,
        center : Vector3,
        size : _c.float,
        tint : Color
    ) ---;

    @(link_name="DrawBillboardRec")
    DrawBillboardRec :: proc(
        camera : Camera,
        texture : Texture2D,
        sourceRec : Rectangle,
        center : Vector3,
        size : _c.float,
        tint : Color
    ) ---;

    @(link_name="CheckCollisionSpheres")
    CheckCollisionSpheres :: proc(
        centerA : Vector3,
        radiusA : _c.float,
        centerB : Vector3,
        radiusB : _c.float
    ) -> bool ---;

    @(link_name="CheckCollisionBoxes")
    CheckCollisionBoxes :: proc(
        box1 : BoundingBox,
        box2 : BoundingBox
    ) -> bool ---;

    @(link_name="CheckCollisionBoxSphere")
    CheckCollisionBoxSphere :: proc(
        box : BoundingBox,
        centerSphere : Vector3,
        radiusSphere : _c.float
    ) -> bool ---;

    @(link_name="CheckCollisionRaySphere")
    CheckCollisionRaySphere :: proc(
        ray : Ray,
        spherePosition : Vector3,
        sphereRadius : _c.float
    ) -> bool ---;

    @(link_name="CheckCollisionRaySphereEx")
    CheckCollisionRaySphereEx :: proc(
        ray : Ray,
        spherePosition : Vector3,
        sphereRadius : _c.float,
        collisionPoint : ^Vector3
    ) -> bool ---;

    @(link_name="CheckCollisionRayBox")
    CheckCollisionRayBox :: proc(
        ray : Ray,
        box : BoundingBox
    ) -> bool ---;

    @(link_name="GetCollisionRayModel")
    GetCollisionRayModel :: proc(
        ray : Ray,
        model : ^Model
    ) -> RayHitInfo ---;

    @(link_name="GetCollisionRayTriangle")
    GetCollisionRayTriangle :: proc(
        ray : Ray,
        p1 : Vector3,
        p2 : Vector3,
        p3 : Vector3
    ) -> RayHitInfo ---;

    @(link_name="GetCollisionRayGround")
    GetCollisionRayGround :: proc(
        ray : Ray,
        groundHeight : _c.float
    ) -> RayHitInfo ---;

    @(link_name="LoadText")
    LoadText :: proc(fileName : cstring) -> cstring ---;

    @(link_name="LoadShader")
    LoadShader :: proc(
        vsFileName : cstring,
        fsFileName : cstring
    ) -> Shader ---;

    @(link_name="LoadShaderCode")
    LoadShaderCode :: proc(
        vsCode : cstring,
        fsCode : cstring
    ) -> Shader ---;

    @(link_name="UnloadShader")
    UnloadShader :: proc(shader : Shader) ---;

    @(link_name="GetShaderDefault")
    GetShaderDefault :: proc() -> Shader ---;

    @(link_name="GetTextureDefault")
    GetTextureDefault :: proc() -> Texture2D ---;

    @(link_name="GetShaderLocation")
    GetShaderLocation :: proc(
        shader : Shader,
        uniformName : cstring
    ) -> _c.int ---;

    @(link_name="SetShaderValue")
    SetShaderValue :: proc(
        shader : Shader,
        uniformLoc : _c.int,
        value : rawptr,
        uniformType : _c.int
    ) ---;

    @(link_name="SetShaderValueV")
    SetShaderValueV :: proc(
        shader : Shader,
        uniformLoc : _c.int,
        value : rawptr,
        uniformType : _c.int,
        count : _c.int
    ) ---;

    @(link_name="SetShaderValueMatrix")
    SetShaderValueMatrix :: proc(
        shader : Shader,
        uniformLoc : _c.int,
        mat : Matrix
    ) ---;

    @(link_name="SetMatrixProjection")
    SetMatrixProjection :: proc(proj : Matrix) ---;

    @(link_name="SetMatrixModelview")
    SetMatrixModelview :: proc(view : Matrix) ---;

    @(link_name="GetMatrixModelview")
    GetMatrixModelview :: proc() -> Matrix ---;

    @(link_name="GenTextureCubemap")
    GenTextureCubemap :: proc(
        shader : Shader,
        skyHDR : Texture2D,
        size : _c.int
    ) -> Texture2D ---;

    @(link_name="GenTextureIrradiance")
    GenTextureIrradiance :: proc(
        shader : Shader,
        cubemap : Texture2D,
        size : _c.int
    ) -> Texture2D ---;

    @(link_name="GenTexturePrefilter")
    GenTexturePrefilter :: proc(
        shader : Shader,
        cubemap : Texture2D,
        size : _c.int
    ) -> Texture2D ---;

    @(link_name="GenTextureBRDF")
    GenTextureBRDF :: proc(
        shader : Shader,
        size : _c.int
    ) -> Texture2D ---;

    @(link_name="BeginShaderMode")
    BeginShaderMode :: proc(shader : Shader) ---;

    @(link_name="EndShaderMode")
    EndShaderMode :: proc() ---;

    @(link_name="BeginBlendMode")
    BeginBlendMode :: proc(mode : _c.int) ---;

    @(link_name="EndBlendMode")
    EndBlendMode :: proc() ---;

    @(link_name="BeginScissorMode")
    BeginScissorMode :: proc(
        x : _c.int,
        y : _c.int,
        width : _c.int,
        height : _c.int
    ) ---;

    @(link_name="EndScissorMode")
    EndScissorMode :: proc() ---;

    @(link_name="GetVrDeviceInfo")
    GetVrDeviceInfo :: proc(vrDeviceType : _c.int) -> VrDeviceInfo ---;

    @(link_name="InitVrSimulator")
    InitVrSimulator :: proc(info : VrDeviceInfo) ---;

    @(link_name="UpdateVrTracking")
    UpdateVrTracking :: proc(camera : ^Camera) ---;

    @(link_name="CloseVrSimulator")
    CloseVrSimulator :: proc() ---;

    @(link_name="IsVrSimulatorReady")
    IsVrSimulatorReady :: proc() -> bool ---;

    @(link_name="ToggleVrMode")
    ToggleVrMode :: proc() ---;

    @(link_name="BeginVrDrawing")
    BeginVrDrawing :: proc() ---;

    @(link_name="EndVrDrawing")
    EndVrDrawing :: proc() ---;

    @(link_name="InitAudioDevice")
    InitAudioDevice :: proc() ---;

    @(link_name="CloseAudioDevice")
    CloseAudioDevice :: proc() ---;

    @(link_name="IsAudioDeviceReady")
    IsAudioDeviceReady :: proc() -> bool ---;

    @(link_name="SetMasterVolume")
    SetMasterVolume :: proc(volume : _c.float) ---;

    @(link_name="LoadWave")
    LoadWave :: proc(fileName : cstring) -> Wave ---;

    @(link_name="LoadWaveEx")
    LoadWaveEx :: proc(
        data : rawptr,
        sampleCount : _c.int,
        sampleRate : _c.int,
        sampleSize : _c.int,
        channels : _c.int
    ) -> Wave ---;

    @(link_name="LoadSound")
    LoadSound :: proc(fileName : cstring) -> Sound ---;

    @(link_name="LoadSoundFromWave")
    LoadSoundFromWave :: proc(wave : Wave) -> Sound ---;

    @(link_name="UpdateSound")
    UpdateSound :: proc(
        sound : Sound,
        data : rawptr,
        samplesCount : _c.int
    ) ---;

    @(link_name="UnloadWave")
    UnloadWave :: proc(wave : Wave) ---;

    @(link_name="UnloadSound")
    UnloadSound :: proc(sound : Sound) ---;

    @(link_name="ExportWave")
    ExportWave :: proc(
        wave : Wave,
        fileName : cstring
    ) ---;

    @(link_name="ExportWaveAsCode")
    ExportWaveAsCode :: proc(
        wave : Wave,
        fileName : cstring
    ) ---;

    @(link_name="PlaySound")
    PlaySound :: proc(sound : Sound) ---;

    @(link_name="PauseSound")
    PauseSound :: proc(sound : Sound) ---;

    @(link_name="ResumeSound")
    ResumeSound :: proc(sound : Sound) ---;

    @(link_name="StopSound")
    StopSound :: proc(sound : Sound) ---;

    @(link_name="IsSoundPlaying")
    IsSoundPlaying :: proc(sound : Sound) -> bool ---;

    @(link_name="SetSoundVolume")
    SetSoundVolume :: proc(
        sound : Sound,
        volume : _c.float
    ) ---;

    @(link_name="SetSoundPitch")
    SetSoundPitch :: proc(
        sound : Sound,
        pitch : _c.float
    ) ---;

    @(link_name="WaveFormat")
    WaveFormat :: proc(
        wave : ^Wave,
        sampleRate : _c.int,
        sampleSize : _c.int,
        channels : _c.int
    ) ---;

    @(link_name="WaveCopy")
    WaveCopy :: proc(wave : Wave) -> Wave ---;

    @(link_name="WaveCrop")
    WaveCrop :: proc(
        wave : ^Wave,
        initSample : _c.int,
        finalSample : _c.int
    ) ---;
